# Hardstuck-frontend

./: .gitignore  README-SETUP.md  README.md  notes.md  package-lock.json  package.json  run-dev.ps1  run-dev.sh  setup-and-run.command  setup-and-run.ps1  setup-and-run.sh  setup.ps1  setup.sh
api/: README.md  app.js  db.js  package-lock.json  package.json  playlist-definitions.js  playlist-normalize.js  server.js
api/tests/: bakkesFavorites.test.js  bakkesmod_history.test.js  dbEvents.test.js  dev-start.test.js  health.test.js  history_export_import.test.js  mmr_update.test.js  playlist_normalization.test.js  presetShare.test.js  profile.test.js  sessions.test.js
bakkes_plugin/: .gitignore  ApiClient.cpp  ApiClient.h  CMakeLists.txt  DiagnosticLogger.cpp  README-DEPLOY.md  README.md  RLTrainingJournal.cpp  RLTrainingJournal.h  imgui_stub.h  pluginconfig.json
bakkes_plugin/include/: ApiClient.h  RLTrainingJournalPlugin.h  bakkesmod_stubs.h  rtj_imgui.h
bakkes_plugin/include/bakkesmod/plugin/: compat.h
bakkes_plugin/include/bakkesmod/wrappers/: CarWrapper.h  PlaylistWrapper.h  PriWrapper.h  TeamWrapper.h  UnrealStringWrapper.h
bakkes_plugin/include/imgui/: imgui.h
bakkes_plugin/scripts/: crashdebug.ps1  deploy.ps1  deploy.sh  enable_wer_dump.ps1  fetch_imgui.ps1
bakkes_plugin/settings/: rltrainingjournal.set
bakkes_plugin/src/: ApiClient.cpp  DiagnosticLogger.cpp  DiagnosticLogger.h  RLTrainingJournalPlugin.cpp
bakkes_plugin/x64/Release/: RL Training Journal.exp  RL Training Journal.json  RLTrainingJournal.exp  RLTrainingJournal.json
tools/: dev-start.js
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/public/: ranks.csv
ui/src/: App.svelte  app.css  global.d.ts  main.ts  setupTests.ts
ui/src/lib/: HistoryScreen.svelte  HomeScreen.svelte  PresetsScreen.svelte  PresetsScreen.test.ts  ProfileScreen.svelte  SkillsScreen.svelte  SkillsScreen.test.ts  TimerScreen.svelte  api.ts  checklistState.ts  constants.ts  homeCache.test.ts  homeCache.ts  playlistDisplay.ts  profilePlaylistStore.ts  profileStore.ts  rankThresholds.ts  serverUpdates.ts  skillsStore.ts  stores.ts  useSkills.ts
ui/src/lib/__tests__/: ProfileScreen.test.ts  TimerScreen.test.ts  rankThresholds.test.ts  serverUpdates.test.ts
ui/src/lib/components/: GoalProgressCard.svelte  OfflineBanner.svelte
ui/src/lib/components/__tests__/: OfflineBanner.test.ts
ui/src/lib/formatters/: goalProgress.ts
ui/src/lib/formatters/__tests__/: goalProgress.test.ts
ui/src/lib/presets/: PresetBlocksEditor.svelte  PresetForm.svelte  types.ts
ui/src/lib/presets/__tests__/: PresetBlocksEditor.test.ts  PresetForm.test.ts  svelteTestUtils.ts
ui/src/lib/queries/: createResourceStore.ts  index.ts
ui/src/lib/queries/__tests__/: createResourceStore.test.ts
